sec5.css
.sec-6{
    display:flex;
    flex-direction: column;
    align-items: center;
    height: 90vh;
    gap:100px;
}
.sec-6 h1{
        font-size: 30px;
        margin-bottom: 20px;
}
.sec-6-1>:nth-child(1){
    font-size: 50px;
    font-weight: 600;
    margin-bottom: 0;
    font-family: Arial, sans-serif;
}
.sec-6-1{
    display:flex;
    flex-direction: column;
    align-items: center;
    padding-top:200px;
    font-family: Arial, sans-serif;

}
.sec-6-2{
    display: flex;
    gap: 50px;
}
.box3{
    padding-top:40px;
    width:450px;
    border:2px solid black;
    height:500px;
    display:flex;
    flex-direction:column;
    align-items: center;
    border-radius:15px;
    padding: 20px;
    font-size: 20px;
    gap:15px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    margin-bottom: 400px;
}
.box3 img{
    width:300px;
    height:300px;
    border-radius: 15px;
    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
}
.box3-2{
    display:flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
}
.box3-2 > :nth-child(1){
    font-size:22px;
    font-weight: 600;
}
@media(max-width:1024px){
  .sec-6-2{
    flex-direction: column;
    align-items: center;
    gap: 30px;
    padding-bottom: 100px; 
    height:100%;
  }
  .box3 {
    width: 500px;
    gap:20px; 
  }
  .box3-2 > :nth-child(1){
    font-size:30px;
    font-weight: 600;
}
}
@media screen and (max-width: 767px) {
  .sec-6-2 {
    flex-direction: column;
    align-items: center;
  }
  .box3 {
    width: 300px;
    gap: 15px;
  }
  .box3-2 > :nth-child(1) {
    font-size: 20px;
    font-weight: 600;
  }
}
@media (max-width: 873px) {
  .sec-6 {
    height: 100%;
    padding: 20px;
  }
  sec-6-1 {
    top:0px;
    padding: 20px;
  }
  span{
    font-size: 15px;
    top:0px;
  }
  .box3 {
    width: 100%;
    padding: 10px;
    margin-bottom: 20px;
  }
  .box3 img {
    width: 100%;
    height: auto;
  }
}

